2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use spaces for rcsclean `get_directory'.

	* rscclean.c: #include "b-divvy.h".
	(get_directory): Rewrite.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consolidate top-level structs; dynamically allocate in `main'.

	* base.h (behavior): Delete var decl.
	(manifestation, parse_state, repository, flow): Likewise.
	(top): New struct.
	(top): New pointer to `struct top'.
	(BE, MANI, LEX, REPO, FLOW): Update.
	(gnurcs_init): New func decl.
	* b-complain.c (vcomplain): Don't flush if `top' is NULL.
	* rcsutil.c: #include "b-divvy.h".
	(gnurcs_init): New func.
	(behavior): Delete `struct behavior'.
	(flow): Delete `struct flow'.
	* rcsfnms.c (manifestation): Delete `struct manifestation'.
	(repository): Delete `struct repository'.
	* rcslex.c (parse_state): Delete `struct parse_state'.
	* ci.c (top): New pointer to `struct top'.
	(main): Don't call `unbuffer_standard_error';
	instead call `gnurcs_init'.
	* co.c: Likewise.
	* ident.c: Likewise.
	* merge.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsmerge.c: Likewise.
	* rlog.c: Likewise.

2010-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: make_space (et al)

	* b-divvy.h: New file.
	* b-divvy.c: New file.
	* Makefile.am (libparts_a_SOURCES): Add b-divvy.h, b-divvy.c.

2010-04-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[test] Test rlog with two (working) filenames.

	* alive.test: Add a simple test with two filenames.

2010-04-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use `fbuf_save' more.

	* rcsfnms.c (bufremember): Use `fbuf_save'.

2010-04-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[test] Test multi-line log messages.

	* alive.test: Make some log messages multi-line.

2010-04-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Ignore `getwd', `getabsname'.

	* base.h (needs_getabsname): Delete #define.
	* rcsfnms.c (getfullRCSname): Remove #if needs_getabsname block.